# ft_printf

./: CMakeLists.txt  Makefile  README.md  a.out  author  main.c
includes/: ft_printf.h
libft/: Makefile
libft/includes/: libft.h
libft/src/: ft_atoi.c  ft_bzero.c  ft_copybyte.c  ft_create_elem.c  ft_get_number.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblanki.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isupper.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_number_length.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putnbrll.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  (+29 more)
pft/: history.csv  test
pft/test.dSYM/Contents/Resources/DWARF/: test
sources/: ft_big_x.c  ft_c.c  ft_d.c  ft_e.c  ft_f.c  ft_f_func.c  ft_format_specifier.c  ft_o.c  ft_p.c  ft_pct.c  ft_printf.c  ft_s.c  ft_setcolor.c  ft_type.c  ft_u.c  ft_width.c  ft_x.c
